# haskell-battleship

./: Battleship-test.hs  Battleship.hs  LICENSE  README.md  Solitaire.hs  haskell-battleship.cabal  stack.yaml
app/: Solitaire.hs  SolitaireScotty.hs  index.html
src/: Battleship-test.hs  Battleship.hs  Cell.hs  Ship.hs  Solitaire.hs  SolitaireScotty.hs
test/: Battleship-test.hs
