name:                haskell-battleship
version:             0.1.0.0
-- synopsis:
description:         The  classic game of battleship - a learning project in Haskell.
homepage:            https://github.com/jwcranford/haskell-battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Cranford
maintainer:          jonathan.w.cranford@gmail.com
copyright:           2017 Jonathan Cranford
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hbattleship-solitaire
  hs-source-dirs:      src
  main-is:             Solitaire.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random, array
  other-modules:       Battleship

executable hbattleship-test
  hs-source-dirs:      src
  main-is:             Battleship-test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HUnit, random, array
  other-modules:       Battleship
