name:                haskell-battleship
version:             0.1.0.0
-- synopsis:
description:         The  classic game of battleship - a learning project in Haskell.
homepage:            https://github.com/jwcranford/haskell-battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Cranford
maintainer:          jonathan.w.cranford@gmail.com
copyright:           2017 Jonathan Cranford
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hbattleship-sol-scotty
 hs-source-dirs:      src
 main-is:             SolitaireScotty.hs
 ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
 other-extensions:     OverloadedStrings
 default-language:    Haskell2010
 build-depends:       base >= 4.7 && < 5, 
                      random,
                      array,
                      containers >= 0.5.8,
                      scotty,
                      http-types,
                      aeson >= 0.10,
                      mtl
 other-modules:       Battleship, Ship, Cell

executable hbattleship-solitaire
  hs-source-dirs:      src
  main-is:             Solitaire.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       random,
                       array,
                       aeson >= 0.10
  other-modules:       Battleship, Ship, Cell

Test-Suite hbattleship-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
  main-is:             Battleship-test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       HUnit, 
                       random, 
                       array,
                       aeson >= 0.10
  other-modules:       Battleship, Ship, Cell
