name:                haskell-battleship
version:             0.1.0.0
-- synopsis:
description:         The  classic game of battleship - a learning project in Haskell.
homepage:            https://github.com/jwcranford/haskell-battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Cranford
maintainer:          jonathan.w.cranford@gmail.com
copyright:           2017 Jonathan Cranford
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
        hs-source-dirs:  src
        exposed-modules: Battleship, Ship, Cell
        build-depends:   base >= 4.7 && < 5,
                         random,
                         array,
                         aeson >= 0.10
        default-language:    Haskell2010

executable hbattleship-sol-scotty
 hs-source-dirs:      app
 main-is:             SolitaireScotty.hs
 ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
 other-extensions:     OverloadedStrings
 default-language:    Haskell2010
 build-depends:       base >= 4.7 && < 5, 
                      random,
                      containers >= 0.5.8,
                      scotty,
                      http-types,
                      aeson >= 0.10,
                      mtl,
                      haskell-battleship

executable hbattleship-solitaire
  hs-source-dirs:      app
  main-is:             Solitaire.hs
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       array,
                       haskell-battleship

Test-Suite hbattleship-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Battleship-test.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       HUnit, 
                       haskell-battleship
